--- a/Paginas/editar_portafolio.html
+++ b/Paginas/editar_portafolio.html
@@ -39,7 +39,7 @@
       <!-- Contenido principal -->
       <main class="flex-1 overflow-y-auto bg-gray-100 scroll-smooth">
         <!-- Envoltura sin centrado, ocupa toda la pantalla -->
-        <div class="w-full h-full p-4">
+          <div class="w-full h-full py-4 px-0">
           <!-- Contenedor general ajustado -->
           <div class="border-[3px] border-[#161a7e] rounded-xl p-4 bg-[#f7f7f738] shadow-md w-full h-full flex flex-col flex-1 min-h-0">
             <form id="editForm" class="flex flex-col gap-6 flex-1 min-h-0">
@@ -47,78 +47,94 @@
               <!-- Cuerpo del formulario -->
               <div class="flex flex-col lg:flex-row gap-6 flex-1 min-h-0">
 
-                <!-- Columna izquierda -->
-                <div class="w-full lg:w-1/2 flex flex-col flex-1 min-h-0 border-[2px] border-[#161a7e] rounded-lg p-4 space-y-6 justify-space-around overflow-auto">
+               <!-- Columna izquierda -->
+<div class="w-full lg:w-1/2 flex flex-col flex-1 min-h-0 border-[2px] border-[#161a7e] rounded-lg p-4 space-y-6 justify-evenly items-center overflow-auto">
 
-                  <!-- Título y Estado -->
-                  <div class="flex flex-col lg:flex-row gap-3 w-full max-w-[600px]">
-                    <div class="w-full lg:w-2/3">
-                      <label class="block font-medium text-gray-800 mb-1 text-lg text-center">Agregar Nuevas Imágenes</label>
-                      <input 
-                        type="text"
-                        name="titulo"
-                        class="w-full px-2 py-1 border border-[#161a7e] rounded-lg bg-[#f7f7f76e] text-gray-800 focus:outline-none focus:ring-2 focus:ring-[#161a7e]"
-                        value="Proyecto de Ejemplo"
-                        required>
-                    </div>
+  <!-- Título y Estado -->
+  <div class="flex flex-col lg:flex-row gap-3 w-full max-w-[600px]">
+    
+    <!-- Campo: Título del Proyecto -->
+    <div class="w-full lg:w-2/3">
+      <label for="titulo" class="block font-medium text-gray-800 mb-1 text-lg">Título del Proyecto</label>
+      <input 
+        id="titulo"
+        type="text"
+        name="titulo"
+        class="w-full px-2 py-1 border border-[#161a7e] rounded-lg bg-[#f7f7f76e] text-gray-800 focus:outline-none focus:ring-2 focus:ring-[#161a7e]"
+        value="Proyecto de Ejemplo"
+        required>
+    </div>
 
-                    <div class="w-full lg:w-1/3">
-                      <select
-                        name="estado"
-                        class="w-full px-2 py-1 border border-[#161a7e] rounded-lg bg-[#f7f7f76e] text-gray-800 focus:outline-none focus:ring-2 focus:ring-[#161a7e]"
-                        required>
-                        <option value="" disabled selected>Elegir estado</option>
-                        <option value="borrador">Borrador</option>
-                        <option value="publicado">Publicado</option>
-                      </select>
-                    </div>
-                  </div>
+    <!-- Campo: Estado -->
+    <div class="w-full lg:w-1/3">
+      <label for="estado" class="block font-medium text-gray-800 mb-1 text-lg">Estado</label>
+      <select
+        id="estado"
+        name="estado"
+        class="w-full px-2 py-1 border border-[#161a7e] rounded-lg bg-[#f7f7f76e] text-gray-800 focus:outline-none focus:ring-2 focus:ring-[#161a7e]"
+        required>
+        <option value="" disabled selected>Elegir estado</option>
+        <option value="borrador">Borrador</option>
+        <option value="publicado">Publicado</option>
+      </select>
+    </div>
+  </div>
 
-                  <!-- Descripción -->
-                  <div class="w-full max-w-[600px]">
-                    <textarea
-                      name="descripcion"
-                      class="w-full px-2 py-1 min-h-[100px] border border-[#161a7e] rounded-lg bg-[#f7f7f76e] text-gray-800 focus:outline-none focus:ring-2 focus:ring-[#161a7e]"
-                      required>Descripción del proyecto...</textarea>  
-                  </div>
+  <!-- Descripción -->
+  <div class="w-full max-w-[600px]">
+    <label for="descripcion" class="block font-medium text-gray-800 mb-1 text-center text-lg">Descripción del Proyecto</label>
+    <textarea
+      id="descripcion"
+      name="descripcion"
+      class="w-full px-2 py-1 min-h-[100px] border border-[#161a7e] rounded-lg bg-[#f7f7f76e] text-gray-800 focus:outline-none focus:ring-2 focus:ring-[#161a7e]"
+      required>Descripción del proyecto...</textarea>  
+  </div>
 
-                  <!-- Fila con 2 selects -->
-                  <div class="flex flex-col lg:flex-row gap-3 w-full max-w-[600px]">
-                    <div class="w-full lg:w-1/2">
-                      <select
-                        name="categoria"
-                        class="w-full px-2 py-1 border border-[#161a7e] rounded-lg bg-[#f7f7f76e] text-gray-800 focus:outline-none focus:ring-2 focus:ring-[#161a7e]"
-                        required>
-                        <option value="">Seleccionar Categoría</option>
-                        <option value="obra_blanca">Obra Blanca</option>
-                        <option value="obra_negra">Obra Negra</option>
-                        <option value="mantenimiento">Mantenimiento</option>
-                      </select>
-                    </div>
+  <!-- Fila con 2 selects -->
+  <div class="flex flex-col lg:flex-row gap-3 w-full max-w-[600px]">
+    
+    <!-- Campo: Categoría -->
+    <div class="w-full lg:w-1/2">
+      <label for="categoria" class="block font-medium text-gray-800 mb-1 text-lg">Categoría</label>
+      <select
+        id="categoria"
+        name="categoria"
+        class="w-full px-2 py-1 border border-[#161a7e] rounded-lg bg-[#f7f7f76e] text-gray-800 focus:outline-none focus:ring-2 focus:ring-[#161a7e]"
+        required>
+        <option value="">Seleccionar Categoría</option>
+        <option value="obra_blanca">Obra Blanca</option>
+        <option value="obra_negra">Obra Negra</option>
+        <option value="mantenimiento">Mantenimiento</option>
+      </select>
+    </div>
 
-                    <div class="w-full lg:w-1/2">
-                      <select
-                        name="tipo_servicio"
-                        class="w-full px-2 py-1 border border-[#161a7e] rounded-lg bg-[#f7f7f76e] text-gray-800 focus:outline-none focus:ring-2 focus:ring-[#161a7e]"
-                        required>
-                        <option value="">Seleccionar Servicio</option>
-                        <option value="construccion">Construcción</option>
-                        <option value="remodelacion">Remodelación</option>
-                        <option value="asesoria">Asesoría</option>
-                      </select>
-                    </div>
-                  </div>
+    <!-- Campo: Tipo de Servicio -->
+    <div class="w-full lg:w-1/2">
+      <label for="tipo_servicio" class="block font-medium text-gray-800 mb-1 text-lg">Tipo de Servicio</label>
+      <select
+        id="tipo_servicio"
+        name="tipo_servicio"
+        class="w-full px-2 py-1 border border-[#161a7e] rounded-lg bg-[#f7f7f76e] text-gray-800 focus:outline-none focus:ring-2 focus:ring-[#161a7e]"
+        required>
+        <option value="">Seleccionar Servicio</option>
+        <option value="construccion">Construcción</option>
+        <option value="remodelacion">Remodelación</option>
+        <option value="asesoria">Asesoría</option>
+      </select>
+    </div>
+  </div>
 
-                  <!-- Imágenes actuales -->
-                  <div class="w-full max-w-[600px]">
-                    <div 
-                      id="currentImages"
-                      class="flex flex-wrap gap-3 justify-center items-center max-w-full overflow-auto max-h-64">
-                      <!-- Se insertan por JS -->
-                    </div>
-                  </div>
+  <!-- Imágenes actuales -->
+  <div class="w-full max-w-[600px]">
+    <label class="block font-medium text-gray-800 mb-1 text-center text-lg">Imágenes Actuales</label>
+    <div 
+      id="currentImages"
+      class="flex flex-wrap gap-3 justify-center items-center max-w-full overflow-auto max-h-64 rounded-lg p-2 bg-[#f7f7f726]">
+      <!-- Se insertan por JS -->
+    </div>
+  </div>
 
-                </div> <!-- Fin columna izquierda -->
+</div> <!-- Fin columna izquierda -->
 
                 <!-- Columna derecha -->
                 <div class="w-full lg:w-1/2 flex flex-col flex-1 min-h-0 border-[2px] border-[#161a7e] rounded-lg p-4 space-y-6 justify-evenly overflow-auto">
