Blog con youtube

--- a/Paginas/blogs.html
+++ b/Paginas/blogs.html
@@ -40,35 +40,72 @@
                     <p class="text-gray-600">Mantente informado sobre las últimas tendencias y consejos en construcción.</p>
                 </div>
                 
-                <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6" style= "min-width: 100%;">
-                    <div class="bg-white rounded-lg shadow overflow-hidden">
-                        <img src="https://example.com/blog1.jpg" alt="Blog 1" class="w-full h-48 object-cover">
-                        <div class="p-4">
-                            <h3 class="text-lg font-semibold text-gray-800">Título del Blog 1</h3>
-                            <p class="text-gray-600">Resumen breve del contenido del blog 1.</p>
-                            <a href="blog1.html" class="text-red-600 hover:underline">Leer más</a>
-                        </div>
+                <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6" style="min-width: 100%;">
+                
+                <!-- Video 1 -->
+                <div class="bg-white rounded-lg shadow overflow-hidden">
+                    <iframe class="w-full h-48" src="https://www.youtube.com/embed/OCMaOMj06aA" title="Video 1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <div class="p-4">
+                        <h3 class="text-lg font-semibold text-gray-800">Progreso de Obra 1</h3>
+                        <p class="text-gray-600">Resumen breve del avance de la obra.</p>
+                        <a href="https://youtu.be/OCMaOMj06aA" target="_blank" class="text-red-600 hover:underline">Ver en YouTube</a>
                     </div>
-                    <div class="bg-white rounded-lg shadow overflow-hidden">
-                        <img src="https://example.com/blog2.jpg" alt="Blog 2" class="w-full h-48 object-cover">
-                        <div class="p-4">
-                            <h3 class="text-lg font-semibold text-gray-800">Título del Blog 2</h3>
-                            <p class="text-gray-600">Resumen breve del contenido del blog 2.</p>
-                            <a href="blog2.html" class="text-red-600 hover:underline">Leer más</a>
-                        </div>
-                    </div>
-                    <div class="bg-white rounded-lg shadow overflow-hidden">
-                        <img src="https://example.com/blog3.jpg" alt="Blog 3" class="w-full h-48 object-cover">
-                        <div class="p-4">
-                            <h3 class="text-lg font-semibold text-gray-800">Título del Blog 3</h3>
-                            <p class="text-gray-600">Resumen breve del contenido del blog 3.</p>
-                            <a href="blog3.html" class="text-red-600 hover:underline">Leer más</a>
-                        </div>
-                    </div>
-                    <!-- Agregar más blogs según sea necesario -->
                 </div>
-            </main>
-        </div>
+
+                <!-- Video 2 -->
+                <div class="bg-white rounded-lg shadow overflow-hidden">
+                    <iframe class="w-full h-48" src="https://www.youtube.com/embed/VIDEO_ID_2" title="Video 2" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <div class="p-4">
+                        <h3 class="text-lg font-semibold text-gray-800">Progreso de Obra 2</h3>
+                        <p class="text-gray-600">Resumen breve del avance de la obra.</p>
+                        <a href="https://www.youtube.com/watch?v=VIDEO_ID_2" target="_blank" class="text-red-600 hover:underline">Ver en YouTube</a>
+                    </div>
+                </div>
+
+                <!-- Video 3 -->
+                <div class="bg-white rounded-lg shadow overflow-hidden">
+                    <iframe class="w-full h-48" src="https://www.youtube.com/embed/VIDEO_ID_3" title="Video 3" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <div class="p-4">
+                        <h3 class="text-lg font-semibold text-gray-800">Progreso de Obra 3</h3>
+                        <p class="text-gray-600">Resumen breve del avance de la obra.</p>
+                        <a href="https://www.youtube.com/watch?v=VIDEO_ID_3" target="_blank" class="text-red-600 hover:underline">Ver en YouTube</a>
+                    </div>
+                </div>
+                <!-- Video 4 -->
+                <div class="bg-white rounded-lg shadow overflow-hidden">
+                    <iframe class="w-full h-48" src="https://www.youtube.com/embed/VIDEO_ID_4" title="Video 1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <div class="p-4">
+                        <h3 class="text-lg font-semibold text-gray-800">Progreso de Obra 1</h3>
+                        <p class="text-gray-600">Resumen breve del avance de la obra.</p>
+                        <a href="https://www.youtube.com/watch?v=VIDEO_ID_4" target="_blank" class="text-red-600 hover:underline">Ver en YouTube</a>
+                    </div>
+                </div>
+
+                <!-- Video 5 -->
+                <div class="bg-white rounded-lg shadow overflow-hidden">
+                    <iframe class="w-full h-48" src="https://www.youtube.com/embed/VIDEO_ID_5" title="Video 2" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <div class="p-4">
+                        <h3 class="text-lg font-semibold text-gray-800">Progreso de Obra 2</h3>
+                        <p class="text-gray-600">Resumen breve del avance de la obra.</p>
+                        <a href="https://www.youtube.com/watch?v=VIDEO_ID_5" target="_blank" class="text-red-600 hover:underline">Ver en YouTube</a>
+                    </div>
+                </div>
+
+                <!-- Video 6 -->
+                <div class="bg-white rounded-lg shadow overflow-hidden">
+                    <iframe class="w-full h-48" src="https://www.youtube.com/embed/FgrGVcXLwnw" title="Video 3" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <div class="p-4">
+                        <h3 class="text-lg font-semibold text-gray-800">Progreso de Obra 3</h3>
+                        <p class="text-gray-600">Resumen breve del avance de la obra.</p>
+                        <a href="https://youtu.be/FgrGVcXLwnw" target="_blank" class="text-red-600 hover:underline">Ver en YouTube</a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Agregar más blogs según sea necesario -->
+            </div>
+        </main>
+    </div>
     </div>
 <script src="../Scripts/main.js"></script>
 </body>
